Fix execution count for cell and add header for challenge analysis section

--- a/titanic_pandas_assignment.ipynb
+++ b/titanic_pandas_assignment.ipynb
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "00212ab9",
    "metadata": {},
    "outputs": [
@@ -1592,6 +1592,8 @@
     }
    ],
    "source": [
+    "#15. Challenge analysis / storytelling\n",
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
